<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bakgrunnur3"
    tools:context="com.example.manisigurdsson.hangman.TwoPlayerOptions">

    <EditText
        android:id="@+id/player1ID"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/p1" />
    <EditText
        android:id="@+id/player2ID"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/p2"/>
    <EditText
        android:id="@+id/secretID"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/secret"/>
    <Button
        android:id="@+id/submitbtnid"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:onClick="submitClick"
        style="@style/buttons"/>

</LinearLayout>
