...
    <string name="hangman_picture"  >Hangman Picture</string>
    <string name="hint"             >Vísbending</string>

    <!--two player-->
    <string name="p1"               >Leikmaður 1</string>
    <string name="p2"               >Leikmaður 2</string>
    <string name="notValid"         >Má ekki vera tómt </string>
    <string name="secret"           >Spilari 1 veldu orð</string>
    <string name="tapadir"          > Þú tapaðir :( orðið var: </string>
    <string name="enginstig"        > þú færð engin stig</string>
    <string name="p2vann"           > vann! orðið var : </string>
    <string name="gerabetur"        > þú verður að gera betur en þetta!</string>

...
